--- a/string_method.html
+++ b/string_method.html
@@ -18,85 +18,85 @@
 	  
 	  // 1 string literal
 	  
-	  let str = 'saran';
-	  document.write(str);
-	  document.write('<br>');
+	  <!-- let str = 'saran'; -->
+	  <!-- document.write(str); -->
+	  <!-- document.write('<br>'); -->
 	  
-	  // 2 string object
+	  <!-- // 2 string object -->
 	  
-	  let nstr = new String("hellow");
-	  document.write(nstr);
-	  document.write('<br>');
+	  <!-- let nstr = new String("hellow"); -->
+	  <!-- document.write(nstr); -->
+	  <!-- document.write('<br>'); -->
 	  
-	  // methods
-	  // 1 charAt method
+	  <!-- // methods -->
+	  <!-- // 1 charAt method -->
 	  
-	  let charA = 'saran';
-	  document.write(charA.charAt(1));
-	  document.write('<br>');
+	  <!-- let charA = 'saran'; -->
+	  <!-- document.write(charA.charAt(1)); -->
+	  <!-- document.write('<br>'); -->
 	  
-	  // 2 concat
+	  <!-- // 2 concat -->
 	  
-	  let c1 = 'hi... ';
-	  let c2 = 'how are you ?';
-	  let c3 = c1.concat(c2);
-	  document.write(c3);
-	  document.write('<br>');
+	  <!-- let c1 = 'hi... '; -->
+	  <!-- let c2 = 'how are you ?'; -->
+	  <!-- let c3 = c1.concat(c2); -->
+	  <!-- document.write(c3); -->
+	  <!-- document.write('<br>'); -->
 	  
-	  // 3 indexOf
+	  <!-- // 3 indexOf -->
 	  
-	  let i1 = 'javascript is a scripting language';
-	  let i2 = i1.indexOf('v');
-	  document.write(i2);
-	  document.write('<br>');
+	  <!-- let i1 = 'javascript is a scripting language'; -->
+	  <!-- let i2 = i1.indexOf('v'); -->
+	  <!-- document.write(i2); -->
+	  <!-- document.write('<br>'); -->
 	  
-	  // 4 lastindexOf
+	  <!-- // 4 lastindexOf -->
 	  
-	  let l1 = 'javascript is a scripting language';
-	  let l2 = l1.lastIndexOf('a');
-	  document.write(l2);
-	  document.write('<br>');
+	  <!-- let l1 = 'javascript is a scripting language'; -->
+	  <!-- let l2 = l1.lastIndexOf('a'); -->
+	  <!-- document.write(l2); -->
+	  <!-- document.write('<br>'); -->
 	  
-	  // 5 toLowerCase()
+	  <!-- // 5 toLowerCase() -->
 	  
-	  let low = 'JAVASCRIPT';
-	  let low1 = low.toLowerCase();
-	  document.write(low1);
-	  document.write('<br>');
+	  <!-- let low = 'JAVASCRIPT'; -->
+	  <!-- let low1 = low.toLowerCase(); -->
+	  <!-- document.write(low1); -->
+	  <!-- document.write('<br>'); -->
 	  
-	  // 6 toUpperCase()
+	  <!-- // 6 toUpperCase() -->
 	  
-	  let up = 'Javascript';
-	  let up1 = up.toUpperCase();
-	  document.write(up1);
-	  document.write('<br>');
+	  <!-- let up = 'Javascript'; -->
+	  <!-- let up1 = up.toUpperCase(); -->
+	  <!-- document.write(up1); -->
+	  <!-- document.write('<br>'); -->
 	  
-	  // 7 slice()
+	  <!-- // 7 slice() -->
 	  
-	  let s = 'javascript';
-	  let s1 = s.slice(3,6);
-      document.write(s1);
-      document.write('<br>');	
+	  <!-- let s = 'javascript'; -->
+	  <!-- let s1 = s.slice(3,6); -->
+      <!-- document.write(s1); -->
+      <!-- document.write('<br>');	 -->
 
-      // 8 trim()
+      <!-- // 8 trim() -->
 	  
-	  let t = '  hi   saran     hi';
-	  let t1 = t.trim();
-	  document.write(t1);
-	  document.write('<br>');
+	  <!-- let t = '  hi   saran     hi'; -->
+	  <!-- let t1 = t.trim(); -->
+	  <!-- document.write(t1); -->
+	  <!-- document.write('<br>'); -->
 	  
-	  // 9 split()
+	  <!-- // 9 split() -->
 	  
-	  let sp1 = 'javascript';
-	  let sp2 = sp1.split('');
-	  document.write(sp2);
-	  document.write('<br>');
+	  <!-- let sp1 = 'javascript'; -->
+	  <!-- let sp2 = sp1.split(''); -->
+	  <!-- document.write(sp2); -->
+	  <!-- document.write('<br>'); -->
 	  
-	  // 10 charCodeAt(unicode)
+	  <!-- // 10 charCodeAt(unicode) -->
 	  
-	  let ca1 = 'javascript';
-	  document.write(ca1.charCodeAt(1));
-	  document.write('<br>');
+	  <!-- let ca1 = 'javascript'; -->
+	  <!-- document.write(ca1.charCodeAt(1)); -->
+	  <!-- document.write('<br>'); -->
 	  
 	  // 11 search
 	  
@@ -107,7 +107,7 @@
 	  // 12 match
 	  
 	  let mat = 'saran';
-	  document.write(mat.match(/o/));
+	  document.write(mat.match(/a/));
 	  document.write('<br>');
 	  
 	  // 13 replace
@@ -116,63 +116,68 @@
       document.write(rep.replace('n', 'nya'));
       document.write('<br>');
 	  
-	  // 14 substr
+	  <!-- // 14 substr -->
 	  
-	  let st = 'javascript';
-	  document.write(st.substr(4,5));
-	  document.write('<br>');
+	  <!-- let st = 'javascript'; -->
+	  <!-- document.write(st.substr(4,5)); -->
+	  <!-- document.write('<br>'); -->
 	  
-	  // 15 substring
+	  <!-- // 15 substring -->
 	  
-	  let ss = 'javascript';
-	  document.write(ss.substr(4,2));
-	  document.write('<br>');
+	  <!-- let ss = 'javascript'; -->
+	  <!-- document.write(ss.substr(4,2)); -->
+	  <!-- document.write('<br>'); -->
 	  
-	  // 16 toLocalLowerCase()
+	  <!-- // 16 toLocalLowerCase() -->
 	  
-	  let ll = 'SARAN';
-	  document.write(ll.toLocaleLowerCase());
-	  document.write('<br>');
+	  <!-- let ll = 'SARAN'; -->
+	  <!-- document.write(ll.toLocaleLowerCase()); -->
+	  <!-- document.write('<br>'); -->
 	  
-	  // 17 padStart()(length,padstring)
+	  <!-- // 17 padStart()(length,padstring) -->
 	  
-	  let pad = '003';
-	  document.write(pad.padStart(4,3));
-	  document.write('<br>');
+	  <!-- let pad = '003'; -->
+	  <!-- document.write(pad.padStart(4,3)); -->
+	  <!-- document.write('<br>'); -->
 	  
-	  // 18 padEnd()(length,padstrings)
+	  <!-- // 18 padEnd()(length,padstrings) -->
 	  
-	  let pad1 = 'saran';
-	  document.write(pad1.padEnd(7,"ya"));
-	  document.write('<br>');
+	  <!-- let pad1 = 'saran'; -->
+	  <!-- document.write(pad1.padEnd(7,"ya")); -->
+	  <!-- document.write('<br>'); -->
 	  
 	  
 	  // 19 includes()
 	  
 	  let inc = 'javascript is a scripting language';
 	  let inc1 = 'is';
-	  document.write(inc.includes(inc1) ? 'is' : "isn't" );
-	  document.write('<br>');
-	  
-	  //20 startsWith()
-	  
-	  let strW = 'javascript is a scripting language';
-	  document.write(strW.startsWith("is",11));
-	  document.write('<br>');
-	  
-	  // 21 endsWith()
-	  
-	  let endW = 'javascript is a scripting language';
-	  document.write(endW.endsWith('language'));
+	  document.write(inc.includes(inc1) ? "is" : "isn't" );
 	  document.write('<br>');
 	  
 	  
+	  <!-- //20 startsWith() -->
+	  
+	  <!-- let strW = 'javascript is a scripting language'; -->
+	  <!-- document.write(strW.startsWith("is",11)); -->
+	  <!-- document.write('<br>'); -->
+	  
+	  <!-- // 21 endsWith() -->
+	  
+	  <!-- let endW = 'javascript is a scripting language'; -->
+	  <!-- document.write(endW.endsWith('language')); -->
+	  <!-- document.write('<br>'); -->
 	  
 	  
+	  let str = '<saran003 R!@#$%%^>';
+      let Spe = str.replace(/[^a-zA-Z ]/g, '');
+      console.log(Spe); 
 	  
 	  
+	 <!-- let str = prompt('enter a sentence') -->
+	 <!-- let b = prompt("enter a string"); -->
+	 <!-- let ans =(str.replace( b, '')); -->
+	 <!-- document.write(ans); -->
 	  
-	 
    </script>
 
 </body>
